alignment correction mobile

--- a/habits/components/full.css
+++ b/habits/components/full.css
@@ -674,7 +674,7 @@ td{
         font-size: 20px;
         float: left;
         width: 225px;
-        margin-bottom: 10px;
+        margin-bottom: 6px;
         margin-top:2px;
     }
 
